--- a/index.html
+++ b/index.html
@@ -91,13 +91,28 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#page-top">HOME</a>
+                        <a class="nav-link me-lg-3" href="#page-top">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
+                        <a class="nav-link me-lg-3" href="#professionalskills">Professional Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
+                        <a class="nav-link me-lg-3" href="#publications">Publications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#books">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#researchgrants">Research Grants</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#invitedlectures">Invited Lectures</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#undertakecourses">Undertake Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">Awards</a>
                     </li>
 
                 </ul>
@@ -135,11 +150,23 @@
     </section>
     <!-- Home -->
 
-    <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <!-- Professional Skills -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="professionalskills">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="ProfessionalSkills-subtitle">Professional Skills</h2>
+            </header>
+            <div class="main-body" id="professionalskills-md"></div>
+
+        </div>
+    </section>
+    <!-- Professional Skills  -->
+
+    <!-- Publications -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="publications">
+        <div class="container px-5">
+            <header>
+                <h2 id="publications-subtitle">Publications</h2>
             </header>
             <div class="main-body" id="publications-md"></div>
 
@@ -147,11 +174,59 @@
     </section>
     <!-- Publications  -->
 
-    <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <!-- Books -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="books">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2 id="books-subtitle">Books</h2>
+            </header>
+            <div class="main-body" id="books-md"></div>
+
+        </div>
+    </section>
+    <!-- Books  -->
+
+    <!-- Research Grants -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="researchgrants">
+        <div class="container px-5">
+            <header>
+                <h2 id="researchgrants-subtitle">Research Grants</h2>
+            </header>
+            <div class="main-body" id="researchgrants-md"></div>
+
+        </div>
+    </section>
+    <!-- Research Grants  -->
+
+    <!-- Invited Lectures -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="invitedlectures">
+        <div class="container px-5">
+            <header>
+                <h2 id="invitedlectures-subtitle">Invited Lectures</h2>
+            </header>
+            <div class="main-body" id="invitedlectures-md"></div>
+
+        </div>
+    </section>
+    <!-- Invited Lectures  -->
+
+     <!-- Undertake Courses -->
+     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="undertakecourses">
+        <div class="container px-5">
+            <header>
+                <h2 id="undertakecourses-subtitle">Undertake Courses</h2>
+            </header>
+            <div class="main-body" id="undertakecourses-md"></div>
+
+        </div>
+    </section>
+    <!-- Undertake Courses  -->   
+
+    <!-- Awards -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
+        <div class="container px-5">
+            <header>
+                <h2 id="awards-subtitle">Awards</h2>
             </header>
             <div class="main-body" id="awards-md"></div>
 
@@ -165,9 +240,9 @@
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="https://github.com/senli1073">Github</a>
+                <a>Github</a>
                 <span class="mx-1">&middot;</span>
-                <a id="license-link" href="https://github.com/senli1073/senli1073.github.io/blob/main/LICENSE">License</a>
+                <a>License</a>
             </div>
         </div>
     </footer>
