--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a class="nav-link me-lg-3" href="#page-top">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#professionalskills">Professional Skills</a>
+                        <a class="nav-link me-lg-3" href="#professionalskills">ProfessionalSkills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">Publications</a>
@@ -103,16 +103,19 @@
                         <a class="nav-link me-lg-3" href="#books">Books</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#researchgrants">Research Grants</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#invitedlectures">Invited Lectures</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#undertakecourses">Undertake Courses</a>
+                        <a class="nav-link me-lg-3" href="#researchgrants">ResearchGrants</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">Awards</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#conferencepresentations">ConferencePresentations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#teachinginnavation">TeachingInnavation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#designportfolio">DesignPortfolio</a>
                     </li>
 
                 </ul>
@@ -121,21 +124,21 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <!-- <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Top Section -->
 
     <!-- Photo -->
-    <div class="container px-5">
+    <!-- <div class="container px-5">
         <div id="avatar">
             <img class="shadow" src="static/assets/img/photo.png">
         </div>
-    </div>
+    </div> -->
     <!-- Photo -->
     
     <!-- Home -->
@@ -198,30 +201,6 @@
     </section>
     <!-- Research Grants  -->
 
-    <!-- Invited Lectures -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="invitedlectures">
-        <div class="container px-5">
-            <header>
-                <h2 id="invitedlectures-subtitle">Invited Lectures</h2>
-            </header>
-            <div class="main-body" id="invitedlectures-md"></div>
-
-        </div>
-    </section>
-    <!-- Invited Lectures  -->
-
-     <!-- Undertake Courses -->
-     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="undertakecourses">
-        <div class="container px-5">
-            <header>
-                <h2 id="undertakecourses-subtitle">Undertake Courses</h2>
-            </header>
-            <div class="main-body" id="undertakecourses-md"></div>
-
-        </div>
-    </section>
-    <!-- Undertake Courses  -->   
-
     <!-- Awards -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
         <div class="container px-5">
@@ -234,6 +213,41 @@
     </section>
     <!-- Awards -->
 
+    <!-- Conference Presentations -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="conferencepresentations">
+        <div class="container px-5">
+            <header>
+                <h2 id="conferencepresentations-subtitle">Conference Presentations</h2>
+            </header>
+            <div class="main-body" id="conferencepresentations-md"></div>
+
+        </div>
+    </section>
+    <!-- Conference Presentations  -->
+
+     <!-- Teaching Innavation -->
+     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="teachinginnavation">
+        <div class="container px-5">
+            <header>
+                <h2 id="teachinginnavation-subtitle">Teaching Innavation</h2>
+            </header>
+            <div class="main-body" id="teachinginnavation-md"></div>
+
+        </div>
+    </section>
+    <!-- Teaching Innavation  -->   
+
+     <!-- Design Portfolio -->
+     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="designportfolio">
+        <div class="container px-5">
+            <header>
+                <h2 id="designportfolio-subtitle">Design Portfolio</h2>
+            </header>
+            <div class="main-body" id="designportfolio-md"></div>
+
+        </div>
+    </section>
+    <!-- Design Portfolio  -->  
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
