--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <a class="nav-link me-lg-3" href="#professionalskills">ProfessionalSkills</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#technicalskills">TechnicalSkills</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">Publications</a>
                     </li>
                     <li class="nav-item">
@@ -114,9 +117,6 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#teachinginnavation">TeachingInnavation</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#designportfolio">DesignPortfolio</a>
-                    </li>
 
                 </ul>
             </div>
@@ -124,13 +124,13 @@
     </nav>
 
     <!-- Top Section -->
-    <!-- <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <section class="top-section" style="background-image: url('static/assets/img/56.jpg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Top Section -->
 
     <!-- Photo -->
@@ -165,8 +165,20 @@
     </section>
     <!-- Professional Skills  -->
 
+    <!-- Professional Skills -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="technicalskills">
+        <div class="container px-5">
+            <header>
+                <h2 id="technicalskills-subtitle">Technical Skills</h2>
+            </header>
+            <div class="main-body" id="technicalskills-md"></div>
+
+        </div>
+    </section>
+    <!-- Professional Skills  -->
+
     <!-- Publications -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="publications">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
                 <h2 id="publications-subtitle">Publications</h2>
@@ -178,7 +190,7 @@
     <!-- Publications  -->
 
     <!-- Books -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="books">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="books">
         <div class="container px-5">
             <header>
                 <h2 id="books-subtitle">Books</h2>
@@ -190,7 +202,7 @@
     <!-- Books  -->
 
     <!-- Research Grants -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="researchgrants">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="researchgrants">
         <div class="container px-5">
             <header>
                 <h2 id="researchgrants-subtitle">Research Grants</h2>
@@ -202,7 +214,7 @@
     <!-- Research Grants  -->
 
     <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="awards">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
         <div class="container px-5">
             <header>
                 <h2 id="awards-subtitle">Awards</h2>
@@ -214,7 +226,7 @@
     <!-- Awards -->
 
     <!-- Conference Presentations -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="conferencepresentations">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="conferencepresentations">
         <div class="container px-5">
             <header>
                 <h2 id="conferencepresentations-subtitle">Conference Presentations</h2>
@@ -226,7 +238,7 @@
     <!-- Conference Presentations  -->
 
      <!-- Teaching Innavation -->
-     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="teachinginnavation">
+     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="teachinginnavation">
         <div class="container px-5">
             <header>
                 <h2 id="teachinginnavation-subtitle">Teaching Innavation</h2>
@@ -237,17 +249,6 @@
     </section>
     <!-- Teaching Innavation  -->   
 
-     <!-- Design Portfolio -->
-     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="designportfolio">
-        <div class="container px-5">
-            <header>
-                <h2 id="designportfolio-subtitle">Design Portfolio</h2>
-            </header>
-            <div class="main-body" id="designportfolio-md"></div>
-
-        </div>
-    </section>
-    <!-- Design Portfolio  -->  
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
