--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/56.jpg');">
+    <!-- <section class="top-section" style="background-image: url('static/assets/img/56.jpg');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Top Section -->
 
     <!-- Photo -->
